--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-theory-traffic-modelling",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest"
   },
@@ -10,5 +10,9 @@
   "license": "MIT",
   "devDependencies": {
     "jest": "^24.8.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:connected-psobocinski/game-theory-traffic-modelling.git"
   }
 }
