--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/psobocinski/traffic-modelling"
   },
   "dependencies": {
     "inquirer": "^6.5.0"
